--- a/A09/README.adoc
+++ b/A09/README.adoc
@@ -2,8 +2,12 @@
 
 Where did your run your tests? A laptop, or goldengate?
 
+Laptop
+
 What are the performance specifications of the machine: number and speed of
 processors, size of RAM? (use `lscpu` and `free -m`)
+
+4 processors with speed of 2495.999 MHz and RAM of 6.1 GB (6277 MB)
 
 = Single-process mandelbrot
 
@@ -13,11 +17,11 @@ the amount of time it takes to compute each image.
 [cols="1,1"]
 !===
 | Size | Time (s) 
-| 100 | todo
-| 400 | todo
-| 800 | todo
-| 1000 | todo
-| 2000 | todo
+| 100 | 1.155473
+| 400 | 0.611105
+| 800 | 1.980290
+| 1000 | 3.59240
+| 2000 | 8.979441
 !===
 
 = Multi-process mandelbrot
